# FlipsiColor

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.en.md  CONTRIBUTING.md  FlipsiColor.sln  LICENSE  README.en.md  README.md  VERSIONING.md  main.cpp  vcpkg.json
.github/workflows/: build.yml  ci.yml
.hermes/: goal-flipsicolor-v0.4.0.md  goal-flipsicolor-v0.4.2.md
FlipsiColor/: App.xaml  App.xaml.cs  Converters.cs  FlipsiColor.csproj  GPUInfo.cs  LoadingWindow.xaml  LoadingWindow.xaml.cs  Lokalisierung.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  app.manifest
FlipsiColor.Avalonia/: App.axaml  App.axaml.cs  FlipsiColor.Avalonia.csproj  Lokalisierung.cs  Program.cs  ThemeManager.cs  app.manifest
FlipsiColor.Avalonia/Assets/i18n/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  tr.json  zh.json
FlipsiColor.Avalonia/Converters/: Converters.cs
FlipsiColor.Avalonia/Styles/: Colors.axaml  DarkTheme.axaml  LightTheme.axaml
FlipsiColor.Avalonia/ViewModels/: MainViewModel.cs
FlipsiColor.Avalonia/Views/: MainWindow.axaml  MainWindow.axaml.cs
FlipsiColor.CLI/: FlipsiColor.CLI.csproj  Program.cs
FlipsiColor.Core/: FlipsiColor.Core.csproj  GPUInfo.cs
FlipsiColor.Core/AI/: InferenceEngine.cs  ModelDownloader.cs  ModelManager.cs  ModellId.cs
FlipsiColor.Core/Color/: CharucoCalibrator.cs  ColorCalibration.cs  ColorManager.cs  LensCorrector.cs  OCIOConfigParser.cs  OCIOManager.cs  StyleLUT.cs
FlipsiColor.Core/Core/: AutoUpdater.cs  IFlipsiColorPlugin.cs  PipelineParams.cs  PresetManager.cs  Settings.cs  UndoManager.cs
FlipsiColor.Core/Image/: BatchProcessor.cs  CropProcessor.cs  ExifReader.cs  HistogramCalculator.cs  ImagePipeline.cs  RawDecoder.cs
FlipsiColor.Core/Utils/: Logger.cs  SecurityValidator.cs
FlipsiColor.Core/Video/: ClipMerger.cs  FrameProcessor.cs  LensfunInstaller.cs  SceneDetector.cs  VapourSynthInstaller.cs  VapourSynthProcessor.cs  VideoPipeline.cs
FlipsiColor.TestRunner/: FlipsiColor.TestRunner.csproj  Program.cs
FlipsiColor/AI/: InferenceEngine.cs  ModelDownloader.cs  ModelManager.cs  ModellId.cs
FlipsiColor/Assets/i18n/: de.json  en.json  es.json  fr.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  tr.json  zh.json
FlipsiColor/Color/: ColorCalibration.cs  ColorManager.cs  DistortionGridCorrector.cs  LensCorrector.cs  StyleLUT.cs
FlipsiColor/Core/: AutoUpdater.cs  Pipeline.cs  PipelineParams.cs  Settings.cs
FlipsiColor/Image/: ExifReader.cs  ImagePipeline.cs  RawDecoder.cs
FlipsiColor/Themes/: DarkTheme.xaml  LightTheme.xaml
FlipsiColor/UI/: FolderPicker.cs  MainViewModel.cs  ThemeManager.cs
FlipsiColor/Utils/: Logger.cs  SecurityValidator.cs
FlipsiColor/Video/: DjiAutoMerge.cs  FrameProcessor.cs  SceneDetector.cs  VideoPipeline.cs
cmake/: FindFFMPEG.cmake  FindLCMS2.cmake  FindLensfun.cmake  FindLibExif.cmake  FindLibRaw.cmake  FindOpenCV.cmake  Findonnxruntime.cmake
docs/: SDP.en.md  SDP.md
docs/concept/: README.md  flipsicolor-concept.en.md  flipsicolor-concept.md
docs/research/: research-models.en.md  research-models.md  research-photo.en.md  research-photo.md  research-video.en.md  research-video.md
i18n/: LANGUAGE.en.md  LANGUAGE.md  flipsicolor_de.ts  flipsicolor_en.ts  flipsicolor_es.ts  flipsicolor_fr.ts  flipsicolor_it.ts  flipsicolor_ja.ts  flipsicolor_ko.ts  flipsicolor_pt_BR.ts  flipsicolor_zh_CN.ts
i18n-templates/: README.md  de.json  en.json  it.json
include/flipsicolor/: msvc_ctime_fix.h  pch.h
include/flipsicolor/ai/: InferenceEngine.h  ModelDownloader.h  ModelManager.h
include/flipsicolor/color/: ColorManager.h  LensCorrector.h  StyleLUT.h
include/flipsicolor/core/: Application.h  Pipeline.h  Project.h  Settings.h
include/flipsicolor/image/: ExifReader.h  ImagePipeline.h  RawDecoder.h
include/flipsicolor/ui/: AppWindow.h  ImageEditor.h  LearningUI.h  SettingsPanel.h  VideoEditor.h
include/flipsicolor/utils/: AutoUpdater.h  FileSystem.h  GPUInfo.h  Logger.h
include/flipsicolor/video/: FrameProcessor.h  SceneDetector.h  VideoPipeline.h
installer/: build-script.sh  installer.iss
installer/linux/: control  flipsicolor.desktop
installer/windows/: installer.nsi
resources/: flipsicolor.desktop  resources.qrc
resources/icons/: flipsicolor.rc.in
resources/models/: model-manifest.json
resources/qml/: AdjustPanel.qml  AppTheme.qml  CanvasArea.qml  ExportDialog.qml  FirstStartWizard.qml  Histogram.qml  IntensitySelector.qml  LearningCard.qml  Main.qml  ModeSelector.qml  SettingsPanel.qml  Sidebar.qml
src/: CMakeLists.txt
src/ai/: InferenceEngine.cpp  ModelDownloader.cpp  ModelManager.cpp
src/color/: ColorManager.cpp  LensCorrector.cpp  StyleLUT.cpp  WhiteBalance.cpp
src/core/: Application.cpp  Pipeline.cpp  Project.cpp  Settings.cpp
src/image/: ExifReader.cpp  ImagePipeline.cpp  RawDecoder.cpp
src/ui/: AppWindow.cpp  ImageEditor.cpp  LearningUI.cpp  SettingsPanel.cpp  VideoEditor.cpp
src/utils/: AutoUpdater.cpp  FileSystem.cpp  GPUInfo.cpp  Logger.cpp
src/video/: FrameProcessor.cpp  SceneDetector.cpp  VideoPipeline.cpp
tests/: CMakeLists.txt  test_main.cpp
